# protocol

./: .editorconfig  .envrc  .gitignore  LICENSE.txt  README.md  deploy-main.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  push-tag.sh  turbo.json  ui.code-workspace
.husky/: post-commit  pre-commit
client-sdk/: .eslintrc.js  eraseme-wtf.json  eraseme-xchain-args.json  eraseme-xchain.json  execute-workflow.sh  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  typedoc.json  withdrawal-from-aave-with-gelato-relay.workflow.json
contracts/: .gitignore  TricryptoPool.json  cheatsheet.js  doItAll.sh  package-lock.json  package.json  truffle-config.js  tsconfig.json
contracts-spec/: fmp.feature  fmp.spec.ts  package.json  tsconfig.json
docs/: .gitignore  architecture.tex
e2e/: e2e.test.ts  package.json
engine/: .gitignore  console-notes.md  deploy-local.sh  eraseme
evm/: .gitignore  .npmignore  .prettierrc.yaml  ava.config.js  doItAll.sh  index.ts  init-console.js  package.json  reset.sh  start-ganache.sh  truffle-config.js  tsconfig.json  x.sh
examples-sdk/: package.json
patches/: @craco__craco@6.4.5.patch  react-simple-code-editor@0.13.0.patch
sdk/: .eslintrc.json  .gitignore  (+4 more)
solana/programs/fmp/: Cargo.toml
solana/programs/fmp/src/: lib.rs  wormhole.rs
solana/src/program/: Cargo.toml  rustfmt.toml
solana/src/program/src/: lib.rs  utils.rs
solana/src/program/src/engine/: execute.rs  mod.rs  workflow_step.rs
solana/src/program/src/steps/: mod.rs  transfer_spl_tokens.rs  wormhole.rs
solana/src/program/tests/: lib.rs
(+1318 files in other folders)
