
[package]
name = "free-market-protocol"
version = "0.0.1"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "=0.9.1"
borsh-derive = "=0.9.1"
solana-program = "=1.9.13"
spl-token = { version = "=3.2.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"] }
wormhole-bridge-solana = { git = "https://github.com/free-market/wormhole.git", branch="fmp", features = ["no-entrypoint", "wasm"] }

[dev-dependencies]
solana-program-test = "=1.9.13"
solana-sdk = "=1.9.13"

[lib]
name = "fmp"
crate-type = ["cdylib", "lib"]
